Stop overflow of explanation

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -91,9 +91,17 @@ body {
 .infoButton {
   background-color: #483475;
   color: white;
+  &:hover {
+    color: white;
+  }
 }
 
 a {
   color: #483475;
   display: inline-block;
+}
+
+.explanation {
+  height: 14rem;
+  overflow: scroll;
 }
